<resources>
    <string name="app_name">petukji_pvt_assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="add_information">ADD INFORMATION</string>
    <string name="added_information">Information has been added successfully</string>
    <string name="error">%1$s</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="edit_information">EDIT INFORMATION</string>
    <string name="update_info">UPDATE INFO</string>
</resources>