<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.AddInfoDialogFragment">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:fontFamily="sans-serif-medium"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:gravity="center_horizontal"
    android:text="@string/add_information"
    android:textSize="24sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_city"/>
    </com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/button_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:text="@string/save"
    android:layout_marginTop="12dp"
    android:padding="16dp"
    android:textColor="@color/white"/>
</LinearLayout>